builder/tests/17-multiple-correct-attributes.stderr
error: multiple `builder` attributes on the same field
 --> tests/17-multiple-correct-attributes.rs:6:5
  |
6 |     #[builder(each = "second")]
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
